--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         </ul>
       </div>
       <!-- mob-menu -->
-      <div class="mob-menu">
+      <div class="mob-menu is-hidden">
         <div class="container">
           <nav class="mob-menu__nav">
             <ul class="mob-menu__nav-list">
@@ -79,8 +79,8 @@
             <button
               type="button"
               class="mob-menu__btn mob-menu__btn--close"
-              aria-expanded="false"
-              aria-controls="mob-menu__nav-box"
+              aria-expanded="true"
+              aria-controls="mob-menu"
             >
               <svg width="40px" height="40px" aria-label="Переключатель мобильного меню">
                 <use
